adds a footer with basic info about the node

--- a/windows/Storage/index.html
+++ b/windows/Storage/index.html
@@ -40,11 +40,6 @@
           <button class="btn btn-default pull-right">
             <span class="icon icon-cog"></span>
           </button>
-
-          <!-- Connection Status -->
-          <div class="btn-group pull-right">
-            <span class="icon icon-dot"></span>
-          </div>
         </div>
       </header>
 
@@ -53,6 +48,14 @@
 
 
     </div>
+    <footer class="toolbar toolbar-footer">
+      <h1 class="title">
+         <!-- Connection Status -->
+        <span id="stats-peers"></span> -
+         <!-- Repository Status -->
+        <span id="stats-repo"></span>
+      </h1>
+    </footer>
   </div>
 </body>
 
