shows the list of pinned objects

--- a/windows/Storage/index.html
+++ b/windows/Storage/index.html
@@ -46,6 +46,16 @@
 
     <div class="window-content">
 
+      <table class="table-striped">
+        <thead>
+          <tr>
+            <th>Hash</th>
+            <th>Size</th>
+          </tr>
+        </thead>
+        <tbody id="obj-list">
+        </tbody>
+      </table>
 
     </div>
     <footer class="toolbar toolbar-footer">
