adds some style

--- a/windows/Import/index.html
+++ b/windows/Import/index.html
@@ -3,6 +3,13 @@
 
 <head>
   <title>Import from Hash</title>
+  <style>
+  .window-content {
+    padding: 24px !important;
+    display: initial !important;
+    background-color: rgb(236, 236, 236) !important;
+  }
+  </style>
 </head>
 
 <body>
@@ -11,5 +18,4 @@
 
 <!-- Electron Javascript -->
 <script src="renderer.jsx" charset="utf-8"></script>
-
 </html>
