adds a basic scheletoon for ConnectivityPanel

--- a/app/windows/Settings/index.html
+++ b/app/windows/Settings/index.html
@@ -3,6 +3,14 @@
 
 <head>
   <title>Settings</title>
+
+    <style>
+  .settings {
+    padding: 24px !important;
+    display: initial !important;
+  }
+  </style>
+
 </head>
 
 <body>
