--- a/app/windows/ResolveIPNS/index.html
+++ b/app/windows/ResolveIPNS/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Go to IPNS</title>
+  <title>Resolve IPNS</title>
   <style>
   .window-content {
     padding: 24px !important;
