--- a/app/windows/Details/index.html
+++ b/app/windows/Details/index.html
@@ -16,5 +16,5 @@
 </body>
 
 <!-- Electron Javascript -->
-<script src="renderer.jsx" charset="utf-8"></script>
+<script src="loader.js" charset="utf-8"></script>
 </html>
