Add spinners to all windows and StorageList's footer

--- a/app/windows/Settings/index.html
+++ b/app/windows/Settings/index.html
@@ -18,5 +18,5 @@
 </body>
 
 <!-- Electron Javascript -->
-<script src="renderer.jsx" charset="utf-8"></script>
+<script src="loader.js" charset="utf-8"></script>
 </html>
