--- a/app/windows/Loading/index.html
+++ b/app/windows/Loading/index.html
@@ -10,6 +10,6 @@
 </body>
 
 <!-- Electron Javascript -->
-<script src="renderer.jsx" charset="utf-8"></script>
+<script src="loader.js" charset="utf-8"></script>
 
 </html>
