--- a/app/windows/ResolveIPNS/index.html
+++ b/app/windows/ResolveIPNS/index.html
@@ -17,5 +17,5 @@
 </body>
 
 <!-- Electron Javascript -->
-<script src="renderer.jsx" charset="utf-8"></script>
+<script src="loader.js" charset="utf-8"></script>
 </html>
